--- a/gb/20/8/18/n12339323.md
+++ b/gb/20/8/18/n12339323.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nsrmna346/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nsrmna346/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nsrmna346/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nsrmna346/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nsrmna346/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nsrmna346/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nsrmna346/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nsrmna346/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nsrmna346/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nsrmna346/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nsrmna346/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nsrmna346/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nsrmna346/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nsrmna346/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nsrmna346/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nsrmna346/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/nsrmna346/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nsrmna346/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/nsrmna346/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nsrmna346/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/nsrmna346/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/nsrmna346/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/nsrmna346/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>台中购物节破50亿消费  卖场超商逾6亿</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/08/08b586d14af2a6807204e8f7caefda03-600x400.jpg" />
 <h6>台中购物节登陆消费卖场超商逾6亿，全联占最多。（台中市政府提供）
 </h6>
 <hr>
-<p>【大纪元2020年08月18日讯】（大纪元记者黄玉燕台湾台中报导）疫后经济呈现“生活消费”领军，“2020<ahref="https://github.com/nsrmna346/djy/blob/master/gb/tag/%E5%8F%B0%E4%B8%AD%E8%B4%AD%E7%89%A9%E8%8A%82.md#1">台中购物节</a>”7月1日开跑，至今发票登录金额已突破54亿元，相较第一届购物节同期消费金额，成长超过2倍。市府经发局分析各类别消费数据，以<ahref="https://github.com/nsrmna346/djy/blob/master/gb/tag/%E5%8D%96%E5%9C%BA.md#1">卖场</a>、<ahref="https://github.com/nsrmna346/djy/blob/master/gb/tag/%E8%B6%85%E5%95%86.md#1">超商</a>累积6.5亿元最高。此外，今年暑假国旅人数骤增，游乐园、OUTLET、KTV也缔造不俗成绩。</p>
-<p>针对超市<ahref="https://github.com/nsrmna346/djy/blob/master/gb/tag/%E5%8D%96%E5%9C%BA.md#1">卖场</a>消费，经发局说明，参加购物节活动的民众，在家乐福、爱买、大买家、大润发及全联等连锁龙头店家消费，登录金额累积逾4.3亿元，其中以“全联”登录消费最多，首部电动机车得主在全联消费216元就抽中大奖。此外，展店规模最多的“便利<ahref="https://github.com/nsrmna346/djy/blob/master/gb/tag/%E8%B6%85%E5%95%86.md#1">超商</a>”成绩也有好成绩，7-Eleven等4大超商，6周以来累计近2.2亿元登录金额。</p>
+<p>【大纪元2020年08月18日讯】（大纪元记者黄玉燕台湾台中报导）疫后经济呈现“生活消费”领军，“2020<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%B0%E4%B8%AD%E8%B4%AD%E7%89%A9%E8%8A%82.md#1">台中购物节</a>”7月1日开跑，至今发票登录金额已突破54亿元，相较第一届购物节同期消费金额，成长超过2倍。市府经发局分析各类别消费数据，以<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8D%96%E5%9C%BA.md#1">卖场</a>、<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%B6%85%E5%95%86.md#1">超商</a>累积6.5亿元最高。此外，今年暑假国旅人数骤增，游乐园、OUTLET、KTV也缔造不俗成绩。</p>
+<p>针对超市<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8D%96%E5%9C%BA.md#1">卖场</a>消费，经发局说明，参加购物节活动的民众，在家乐福、爱买、大买家、大润发及全联等连锁龙头店家消费，登录金额累积逾4.3亿元，其中以“全联”登录消费最多，首部电动机车得主在全联消费216元就抽中大奖。此外，展店规模最多的“便利<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%B6%85%E5%95%86.md#1">超商</a>”成绩也有好成绩，7-Eleven等4大超商，6周以来累计近2.2亿元登录金额。</p>
 <p>炎炎夏日，“手摇茶饮”也是消费热点!根据统计，春水堂替代品牌“茶汤会”，及老品牌“50岚”，两大茶饮6周累积超过1,171万元登录金额。</p>
 <p>还有疫后的“报复性”旅游，经发局提到，今年暑假国旅人数成长，台中游乐园、OUTLET都有显着成长。MITSUI?OUTLET?PARK6周累积近五千万元；受毁暑期亲子旅游的丽宝乐园、丽宝OUTLET、福容大饭店也累积4,761万元登录金额。</p>
 <p>购物节活动仅剩最后2周，9月12日将抽出千万小豪宅得主，市府预估抢搭最后一波民众仍会相当踊跃，提醒民众把握机会，购足日常所需、游玩赏乐抽大奖。◇</p>
@@ -17,48 +17,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/nsrmna346/djy/blob/master/gb/20/5/18/n12117931.md#1">台中购物节催消费力   三万店家疫后抢卖</a></li>
-<li><a href="https://github.com/nsrmna346/djy/blob/master/gb/20/6/15/n12186364.md#1">台中购物节周周抽现金 大奖一中商圈小豪宅</a></li>
-<li><a href="https://github.com/nsrmna346/djy/blob/master/gb/20/6/24/n12208895.md#1">台中购物节APP 720万建置费惹议</a></li>
-<li><a href="https://github.com/nsrmna346/djy/blob/master/gb/20/7/3/n12229920.md#1">抢攻疫后观光财  “台中购物节”App热登第一</a></li>
-<li><a href="https://github.com/nsrmna346/djy/blob/master/gb/20/7/9/n12243926.md#1">台中购物节抽小豪宅 搭小黄也算</a></li>
-<li><a href="https://github.com/nsrmna346/djy/blob/master/gb/20/7/15/n12257024.md#1">“百万”消费出没  抢登台中购物节</a></li>
-<li><a href="https://github.com/nsrmna346/djy/blob/master/gb/20/8/18/n12339265.md#1">南屯、北屯区长走马上任    期勉让基层有感</a></li>
-<li><a href="https://github.com/nsrmna346/djy/blob/master/gb/20/8/18/n12338979.md#1">贡献卓著  同济会全国年会展社会公益成果</a></li>
-<li><a href="https://github.com/nsrmna346/djy/blob/master/gb/20/8/18/n12337999.md#1">联手复古尪仔标插画  抢攻中秋月饼市场</a></li>
-<li><a href="https://github.com/nsrmna346/djy/blob/master/gb/20/8/17/n12337394.md#1">“台中州厅”6.3亿修复工程 估2022年完工</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/5/18/n12117931.md#1">台中购物节催消费力   三万店家疫后抢卖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/6/15/n12186364.md#1">台中购物节周周抽现金 大奖一中商圈小豪宅</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/6/24/n12208895.md#1">台中购物节APP 720万建置费惹议</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/3/n12229920.md#1">抢攻疫后观光财  “台中购物节”App热登第一</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/9/n12243926.md#1">台中购物节抽小豪宅 搭小黄也算</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/15/n12257024.md#1">“百万”消费出没  抢登台中购物节</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680620.md#1">台中YouBike2.0千站达标 最高周转率5在新光远百</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680380.md#1">科博馆鸟瞰剧场走入历史 告别演出4月登场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679906.md#1">雾峰农会结合户政所 推出新生儿纪念酒</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678509.md#1">中部美展首奖揭晓  19岁萧辅一版画作品《缄》</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/20/n10232804.md#1" target="_blank">共产暴政录：精于绑票和洗劫的方志敏</a></li><li><a href="https://github.com/nsrmna346/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/11/27/n8533466.md#1" target="_blank">一位医生太太见证医学无法达到的奇迹</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/6/n10619679.md#1" target="_blank">林辉：教授从练习低头弯腰到乐极生悲</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/20/n11466682.md#1" target="_blank">患脑瘤等死 中共总参工程师炼法轮功后痊愈</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/6/n12311908.md#1">僧人神游极乐世界 带回醒世奇闻</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/6/n12310782.md#1">顺天意民心退位让国 隆裕太后获盛赞</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/8/n12316046.md#1">中国古代独步天下的天文科技成就</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/4/n12306294.md#1">“荷花定律”古代版：“行百里者半九十”</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/6/7/n12168858.md#1">“势败休云贵  家亡莫论亲”  板儿递给巧姐的那个佛手</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/15/n12334172.md#1">【直播】美国华人吁中国城撤下中共五星旗</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/16/n12335697.md#1">【薇羽看世间】以阿全面建交 美国剑指中共</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/17/n12338272.md#1">【新闻看点】北戴河会超长结束 习难脱7大困境</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/15/n12332658.md#1">为何美F-35战机“野兽模式”对敌方很致命</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/16/n12335764.md#1">美公布对台军售合约 超级巨炮或部署台湾</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/14/n12332073.md#1">【独家】中石油密件曝海外党组织转地下</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/16/n12335475.md#1">李若彤首度公布真实年龄 冻龄外表震惊粉丝</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/15/n12333541.md#1">罗霈颖告别式众星友送行 与父长眠桃园大溪</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/16/n12335889.md#1">分享十岁女儿扎染技能 吴尊全家穿亲子装逛街</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/16/n12335654.md#1">为戏增肥又迅速减重 冯绍峰怪嗔遭选择性偷拍</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/15/n12332419.md#1">《超能计划》影评：获得超能力 未必是人类之福</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/16/n12334408.md#1">全球首例因疫情“亡国” 南半球小国宣布解散</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/15/n12333887.md#1">大豆降坏胆固醇 预防动脉硬化 7种豆制品可常吃</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/16/n12335214.md#1">为护小主人 美国牧羊犬与歹徒搏斗身中三枪</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/15/n12333334.md#1">英女童天生脏器外露 肚上长“球” 现已2岁</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/14/n12331937.md#1">【直播回放】肌力不足易胖老得快？4周减肥增肌、甩掉酸痛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/21/n13660848.md#1">【未解之谜】为何通灵者 看不透自己的未来？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674654.md#1">【十字路口】北京望俄战败？王毅拉拢印度踢铁板</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675431.md#1">【舞蹈三剑客】片尾彩蛋！三剑客公开纾压秘方</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674186.md#1">上海疫情大爆发 张文宏言论引炮轰</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13673923.md#1">挺俄反俄两派互搏 中共要全国学校紧跟党立场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673050.md#1">俄乌战争后效应 外资大规模撤离大陆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672123.md#1">Selina直播中突离席 要“带男友进来”吓坏黄子佼</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673289.md#1">参加西藏之家音乐会 基努李维主演电影遭下架</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673381.md#1">“一代笑匠”许冠文获香港金像奖终身成就奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674280.md#1">TAKAHIRO与武井咲次女出生：热闹中感受幸福</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/22/n13663634.md#1">姜是厨房常见药 能暖胃、去湿气 2情况不能吃</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669562.md#1">太晚吃东西真的会胖？营养饮食5个常见迷思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/14/n13645681.md#1">不吃油、米饭？让大脑开心的食物吃对就不怕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672739.md#1">【健康1+1】CDC：废水预测病毒升 下波高峰不是BA2？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/nsrmna346/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/nsrmna346/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/18/n12339323.htm">台中购物节破50亿消费  卖场超商逾6亿</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/18/n12339323.htm">台中购物节破50亿消费  卖场超商逾6亿</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/nsrmna346/djy/blob/master/gb/20/8/18/n12339323.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/nsrmna346/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/nsrmna346/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nsrmna346/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/8/18/n12339323.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
